Fix flickering bug

--- a/main.css
+++ b/main.css
@@ -135,14 +135,15 @@ a {
     font-size:25px;
     text-transform:uppercase;
     opacity: 0;
+    z-index: -1;
 }
-
 
 .image {
 	margin-bottom: 24px;
 	position: relative;
 	box-sizing: border-box;
 	display: block;
+	z-index: 0;
 }
 
 img{
@@ -167,18 +168,16 @@ img{
     font-size: 16px;
     text-align: center;
     padding-left: 10px;
-    padding-bottom: 100px
-    padding-top:20px;
+    padding-top:15px;
 
 }
 
 #about-img{
-	height: 450px;
+	height: 500px;
 	width: auto;
-	transform: rotate(90deg);
 	display: block;
     margin: auto;
 	clear: both;
-	padding: 100px 0 20px 0;
+	padding: 20px 0 20px 0;
 
 }
